[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
gradio = "^3.1.1"
requests = "==2.32.3"
kucoin-python = "==1.0.18"
binance = "==0.3"
finnhub-python = "==2.4.19"
fmp-python = "==0.1.4"
fmp = "==0.3.3"
coinlore = "==0.1.6"
cryptocompare = "==0.7.6"
cryptocompare-client = "==0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"